fix broken css

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,5 +1,5 @@
 /* Override main.scss settings */
-.page { width: inherit; padding-left: 10pt; padding-right: 10pt; }
+/*.page { width: inherit; padding-left: 10pt; padding-right: 10pt; }*/
 .page__content p, .page__content li, .page__content dl { font-size: 16px; }
 
 /* new elements */
